backend/error_utf8.log
node : file:///C:/Use
rs/amita/Downloads/ce
rtificate-automation-
master/certificate-au
tomation-master/backe
nd/services/googleDri
veService.js:2
At line:1 char:1
+ node index.js > 
error.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (file://   
 /C:/User...iveSe    
rvice.js:2:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
import apikeys from 
'../google.json' 
assert { type: 
'json' };
                     
                
^^^^^^

SyntaxError: 
Unexpected 
identifier 'assert'
    at compileSourceT
extModule (node:inter
nal/modules/esm/utils
:344:16)
    at ModuleLoader.m
oduleStrategy (node:i
nternal/modules/esm/t
ranslators:105:18)
    at #translate (no
de:internal/modules/e
sm/loader:534:12)
    at ModuleLoader.l
oadAndTranslate (node
:internal/modules/esm
/loader:581:27)

Node.js v22.17.0
